fixed footer overlap,added percent width. yet to do variables.

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     padding-top: 0.01rem;
     display: flex;
     flex-direction: column;
-    width: 50rem;
+    width: 100%;
 }
 
 .container{
@@ -36,7 +36,7 @@ body{
 }
 
 .main-header{
-    font-size: 7rem;
+    font-size: 4rem;
     font-weight: 600;
     padding: 5rem;
 }
